fix: Use correct breakpoint for navbar dark mode switcher

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -26,18 +26,18 @@
         }
     }
 
-    @include bootstrap.media-breakpoint-up('sm') {
+    @include bootstrap.media-breakpoint-up('md') {
         .navbar-options {
             order: 1;
         }
     }
 
     #dark-mode-switcher {
-        @include bootstrap.media-breakpoint-up('sm') {
+        @include bootstrap.media-breakpoint-up('md') {
             margin-left: 1rem;
         }
 
-        @include bootstrap.media-breakpoint-down('sm') {
+        @include bootstrap.media-breakpoint-down('md') {
             margin-right: 1rem;
 
             color: rgba(255, 255, 255, 0.55);
